--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Adarsh verma</title>
     <link rel="icon" href="./assets/toonpic.jpg">
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
